TEST-232 fix: <p>Improper Neutralization of Special Elements used in an OS Command ('OS Command Injection')</p> Fixes: java.spring.security.injection.tainted-system-command.tainted-system-command_src/main/java/org/springframework/samples/petclinic/owner/OwnerController.java:222_https://github.com/cloudply/spring-petclinic_78 Rule: java.spring.security.injection.tainted-system-command.tainted-system-command